--- a/Orc.DependencyViewer/packages.config
+++ b/Orc.DependencyViewer/packages.config
@@ -7,8 +7,8 @@
   <package id="ControlzEx" version="4.2.0" targetFramework="net472" />
   <package id="CsvHelper" version="12.2.2" targetFramework="net472" />
   <package id="Expression.Blend.Sdk.WPF" version="1.0.1" targetFramework="net472" />
-  <package id="Fluent.Ribbon" version="7.0.1" targetFramework="net472" />
   <package id="Fody" version="6.1.0" targetFramework="net472" developmentDependency="true" />
+  <package id="Ionic.Zip" version="1.9.1.8" targetFramework="net472" />
   <package id="LoadAssembliesOnStartup.Fody" version="4.3.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.Web.Xdt" version="2.1.2" targetFramework="net472" />
@@ -38,6 +38,9 @@
   <package id="Orc.LogViewer" version="3.3.0" targetFramework="net472" />
   <package id="Orc.NuGetExplorer" version="4.0.0-beta0002" targetFramework="net472" />
   <package id="Orc.NuGetExplorer.Xaml" version="4.0.0-beta0002" targetFramework="net472" />
+  <package id="Orc.ProjectManagement" version="3.3.0" targetFramework="net472" />
+  <package id="Orc.SystemInfo" version="3.2.0" targetFramework="net472" />
+  <package id="Orchestra.Core" version="5.3.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.6.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.6.0" targetFramework="net472" />
